# AWC_GUI

./: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  character.cpp  character.h  definitions.h  engine.cpp  engine.h  injury.h  itemregistry.cpp  itemregistry.h  role.h  role.hpp  stat.cpp  stat.h  status.h  types.h
